--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,22 @@ branca==0.8.1 ; python_version >= "3.13" and python_version < "4.0"
 certifi==2025.1.31 ; python_version >= "3.13" and python_version < "4.0"
 charset-normalizer==3.4.1 ; python_version >= "3.13" and python_version < "4.0"
 folium==0.19.4 ; python_version >= "3.13" and python_version < "4.0"
+geographiclib==2.0 ; python_version >= "3.13" and python_version < "4.0"
+geopandas==1.0.1 ; python_version >= "3.13" and python_version < "4.0"
+geopy==2.4.1 ; python_version >= "3.13" and python_version < "4.0"
 idna==3.10 ; python_version >= "3.13" and python_version < "4.0"
 jinja2==3.1.5 ; python_version >= "3.13" and python_version < "4.0"
 markupsafe==3.0.2 ; python_version >= "3.13" and python_version < "4.0"
 numpy==2.2.3 ; python_version >= "3.13" and python_version < "4.0"
+packaging==24.2 ; python_version >= "3.13" and python_version < "4.0"
+pandas==2.2.3 ; python_version >= "3.13" and python_version < "4.0"
+pyogrio==0.10.0 ; python_version >= "3.13" and python_version < "4.0"
+pyproj==3.7.1 ; python_version >= "3.13" and python_version < "4.0"
+python-dateutil==2.9.0.post0 ; python_version >= "3.13" and python_version < "4.0"
+pytz==2025.1 ; python_version >= "3.13" and python_version < "4.0"
 requests==2.32.3 ; python_version >= "3.13" and python_version < "4.0"
+shapely==2.0.7 ; python_version >= "3.13" and python_version < "4.0"
+six==1.17.0 ; python_version >= "3.13" and python_version < "4.0"
+tzdata==2025.1 ; python_version >= "3.13" and python_version < "4.0"
 urllib3==2.3.0 ; python_version >= "3.13" and python_version < "4.0"
 xyzservices==2025.1.0 ; python_version >= "3.13" and python_version < "4.0"
