--- a/requirements.txt
+++ b/requirements.txt
@@ -1,53 +1,110 @@
-appnope==0.1.4 ; python_version >= "3.13" and python_version < "4.0" and platform_system == "Darwin"
-asttokens==3.0.0 ; python_version >= "3.13" and python_version < "4.0"
-branca==0.8.1 ; python_version >= "3.13" and python_version < "4.0"
-certifi==2025.1.31 ; python_version >= "3.13" and python_version < "4.0"
-cffi==1.17.1 ; python_version >= "3.13" and python_version < "4.0" and implementation_name == "pypy"
-charset-normalizer==3.4.1 ; python_version >= "3.13" and python_version < "4.0"
-colorama==0.4.6 ; python_version >= "3.13" and python_version < "4.0" and sys_platform == "win32"
-comm==0.2.2 ; python_version >= "3.13" and python_version < "4.0"
-debugpy==1.8.12 ; python_version >= "3.13" and python_version < "4.0"
-decorator==5.1.1 ; python_version >= "3.13" and python_version < "4.0"
-executing==2.2.0 ; python_version >= "3.13" and python_version < "4.0"
-folium==0.19.4 ; python_version >= "3.13" and python_version < "4.0"
-geographiclib==2.0 ; python_version >= "3.13" and python_version < "4.0"
-geopandas==1.0.1 ; python_version >= "3.13" and python_version < "4.0"
-geopy==2.4.1 ; python_version >= "3.13" and python_version < "4.0"
-idna==3.10 ; python_version >= "3.13" and python_version < "4.0"
-ipykernel==6.29.5 ; python_version >= "3.13" and python_version < "4.0"
-ipython==8.32.0 ; python_version >= "3.13" and python_version < "4.0"
-jedi==0.19.2 ; python_version >= "3.13" and python_version < "4.0"
-jinja2==3.1.5 ; python_version >= "3.13" and python_version < "4.0"
-jupyter-client==8.6.3 ; python_version >= "3.13" and python_version < "4.0"
-jupyter-core==5.7.2 ; python_version >= "3.13" and python_version < "4.0"
-markupsafe==3.0.2 ; python_version >= "3.13" and python_version < "4.0"
-matplotlib-inline==0.1.7 ; python_version >= "3.13" and python_version < "4.0"
-nest-asyncio==1.6.0 ; python_version >= "3.13" and python_version < "4.0"
-numpy==2.2.3 ; python_version >= "3.13" and python_version < "4.0"
-packaging==24.2 ; python_version >= "3.13" and python_version < "4.0"
-pandas==2.2.3 ; python_version >= "3.13" and python_version < "4.0"
-parso==0.8.4 ; python_version >= "3.13" and python_version < "4.0"
-pexpect==4.9.0 ; python_version >= "3.13" and python_version < "4.0" and (sys_platform != "win32" and sys_platform != "emscripten")
-platformdirs==4.3.6 ; python_version >= "3.13" and python_version < "4.0"
-prompt-toolkit==3.0.50 ; python_version >= "3.13" and python_version < "4.0"
-psutil==7.0.0 ; python_version >= "3.13" and python_version < "4.0"
-ptyprocess==0.7.0 ; python_version >= "3.13" and python_version < "4.0" and (sys_platform != "win32" and sys_platform != "emscripten")
-pure-eval==0.2.3 ; python_version >= "3.13" and python_version < "4.0"
-pycparser==2.22 ; python_version >= "3.13" and python_version < "4.0" and implementation_name == "pypy"
-pygments==2.19.1 ; python_version >= "3.13" and python_version < "4.0"
-pyogrio==0.10.0 ; python_version >= "3.13" and python_version < "4.0"
-pyproj==3.7.1 ; python_version >= "3.13" and python_version < "4.0"
-python-dateutil==2.9.0.post0 ; python_version >= "3.13" and python_version < "4.0"
-pytz==2025.1 ; python_version >= "3.13" and python_version < "4.0"
-pywin32==308 ; sys_platform == "win32" and platform_python_implementation != "PyPy" and python_version >= "3.13" and python_version < "4.0"
-pyzmq==26.2.1 ; python_version >= "3.13" and python_version < "4.0"
-requests==2.32.3 ; python_version >= "3.13" and python_version < "4.0"
-shapely==2.0.7 ; python_version >= "3.13" and python_version < "4.0"
-six==1.17.0 ; python_version >= "3.13" and python_version < "4.0"
-stack-data==0.6.3 ; python_version >= "3.13" and python_version < "4.0"
-tornado==6.4.2 ; python_version >= "3.13" and python_version < "4.0"
-traitlets==5.14.3 ; python_version >= "3.13" and python_version < "4.0"
-tzdata==2025.1 ; python_version >= "3.13" and python_version < "4.0"
-urllib3==2.3.0 ; python_version >= "3.13" and python_version < "4.0"
-wcwidth==0.2.13 ; python_version >= "3.13" and python_version < "4.0"
-xyzservices==2025.1.0 ; python_version >= "3.13" and python_version < "4.0"
+aiohappyeyeballs==2.4.6
+aiohttp==3.11.12
+aiosignal==1.3.2
+altair==5.5.0
+annotated-types==0.7.0
+anyio==4.8.0
+attrs==25.1.0
+blinker==1.9.0
+branca==0.8.1
+cachetools==5.5.1
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+click-plugins==1.1.1
+cligj==0.7.2
+dataclasses-json==0.6.7
+filetype==1.2.0
+fiona==1.10.1
+folium==0.19.4
+frozenlist==1.5.0
+geopandas==1.0.1
+gitdb==4.0.12
+GitPython==3.1.44
+google-ai-generativelanguage==0.6.15
+google-api-core==2.24.1
+google-api-python-client==2.160.0
+google-auth==2.38.0
+google-auth-httplib2==0.2.0
+google-generativeai==0.8.4
+googleapis-common-protos==1.66.0
+grpcio==1.70.0
+grpcio-status==1.70.0
+h11==0.14.0
+httpcore==1.0.7
+httplib2==0.22.0
+httpx==0.28.1
+httpx-sse==0.4.0
+idna==3.10
+Jinja2==3.1.5
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+langchain==0.3.18
+langchain-community==0.3.17
+langchain-core==0.3.34
+langchain-google-genai==2.0.9
+langchain-text-splitters==0.3.6
+langgraph==0.2.71
+langgraph-checkpoint==2.0.12
+langgraph-sdk==0.1.51
+langsmith==0.3.8
+Markdown==3.7
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+marshmallow==3.26.1
+mdurl==0.1.2
+msgpack==1.1.0
+multidict==6.1.0
+mypy-extensions==1.0.0
+narwhals==1.27.1
+networkx==3.4.2
+numpy==2.2.2
+orjson==3.10.15
+packaging==24.2
+pandas==2.2.3
+pillow==11.1.0
+propcache==0.2.1
+proto-plus==1.26.0
+protobuf==5.29.3
+pyarrow==19.0.1
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pydantic==2.10.6
+pydantic-settings==2.7.1
+pydantic_core==2.27.2
+pydeck==0.9.1
+Pygments==2.19.1
+pyogrio==0.10.0
+pyparsing==3.2.1
+pyproj==3.7.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2025.1
+PyYAML==6.0.2
+referencing==0.36.2
+requests==2.32.3
+requests-toolbelt==1.0.0
+rich==13.9.4
+rpds-py==0.23.0
+rsa==4.9
+shapely==2.0.7
+six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
+SQLAlchemy==2.0.38
+streamlit==1.42.2
+streamlit_folium==0.24.0
+tenacity==9.0.0
+toml==0.10.2
+tornado==6.4.2
+tqdm==4.67.1
+typing-inspect==0.9.0
+typing_extensions==4.12.2
+tzdata==2025.1
+uritemplate==4.1.1
+urllib3==2.3.0
+xyzservices==2025.1.0
+yarl==1.18.3
+zstandard==0.23.0
