--- a/requirements.txt
+++ b/requirements.txt
@@ -1,110 +1,92 @@
-aiohappyeyeballs
-aiohttp
-aiosignal
-altair
-annotated-types
-anyio
-attrs
-blinker
-branca
-cachetools
-certifi
-charset-normalizer
-click
-click-plugins
-cligj
-dataclasses-json
-filetype
-fiona
-folium
-frozenlist
-geopandas
-gitdb
-GitPython
-google-ai-generativelanguage
-google-api-core
-google-api-python-client
-google-auth
-google-auth-httplib2
-google-generativeai
-googleapis-common-protos
-grpcio
-grpcio-status
-h11
-httpcore
-httplib2
-httpx
-httpx-sse
-idna
-Jinja2
-jsonpatch
-jsonpointer
-jsonschema
-jsonschema-specifications
-langchain
-langchain-community
-langchain-core
-langchain-google-genai
-langchain-text-splitters
-langgraph
-langgraph-checkpoint
-langgraph-sdk
-langsmith
-Markdown
-markdown-it-py
-MarkupSafe
-marshmallow
-mdurl
-msgpack
-multidict
-mypy-extensions
-narwhals
-networkx
-numpy
-orjson
-packaging
-pandas
-pillow
-propcache
-proto-plus
-protobuf
-pyarrow
-pyasn1
-pyasn1_modules
-pydantic
-pydantic-settings
-pydantic_core
-pydeck
-Pygments
-pyogrio
-pyparsing
-pyproj
-python-dateutil
-python-dotenv
-pytz
-PyYAML
-referencing
-requests
-requests-toolbelt
-rich
-rpds-py
-rsa
-shapely
-six
-smmap
-sniffio
-SQLAlchemy
-streamlit
-streamlit_folium
-tenacity
-toml
-tornado
-tqdm
-typing-inspect
-typing_extensions
-tzdata
-uritemplate
-urllib3
-xyzservices
-yarl
-zstandard
+altair==5.5.0 ; python_version >= "3.10" and python_version < "4.0"
+annotated-types==0.7.0 ; python_version >= "3.10" and python_version < "4.0"
+anyio==4.8.0 ; python_version >= "3.10" and python_version < "4.0"
+attrs==25.1.0 ; python_version >= "3.10" and python_version < "4.0"
+blinker==1.9.0 ; python_version >= "3.10" and python_version < "4.0"
+branca==0.8.1 ; python_version >= "3.10" and python_version < "4.0"
+cachetools==5.5.2 ; python_version >= "3.10" and python_version < "4.0"
+certifi==2025.1.31 ; python_version >= "3.10" and python_version < "4.0"
+cffi==1.17.1 ; python_version >= "3.10" and python_version < "4.0" and platform_python_implementation == "PyPy"
+charset-normalizer==3.4.1 ; python_version >= "3.10" and python_version < "4.0"
+click==8.1.8 ; python_version >= "3.10" and python_version < "4.0"
+colorama==0.4.6 ; python_version >= "3.10" and python_version < "4.0" and platform_system == "Windows"
+dotenv==0.9.9 ; python_version >= "3.10" and python_version < "4.0"
+exceptiongroup==1.2.2 ; python_version >= "3.10" and python_version < "3.11"
+filetype==1.2.0 ; python_version >= "3.10" and python_version < "4.0"
+folium==0.19.4 ; python_version >= "3.10" and python_version < "4.0"
+gitdb==4.0.12 ; python_version >= "3.10" and python_version < "4.0"
+gitpython==3.1.44 ; python_version >= "3.10" and python_version < "4.0"
+google-ai-generativelanguage==0.6.15 ; python_version >= "3.10" and python_version < "4.0"
+google-api-core==2.24.1 ; python_version >= "3.10" and python_version < "4.0"
+google-api-core[grpc]==2.24.1 ; python_version >= "3.10" and python_version < "4.0"
+google-api-python-client==2.161.0 ; python_version >= "3.10" and python_version < "4.0"
+google-auth-httplib2==0.2.0 ; python_version >= "3.10" and python_version < "4.0"
+google-auth==2.38.0 ; python_version >= "3.10" and python_version < "4.0"
+google-generativeai==0.8.4 ; python_version >= "3.10" and python_version < "4.0"
+googleapis-common-protos==1.68.0 ; python_version >= "3.10" and python_version < "4.0"
+grpcio-status==1.70.0 ; python_version < "4.0" and python_version >= "3.10"
+grpcio==1.70.0 ; python_version < "4.0" and python_version >= "3.10"
+h11==0.14.0 ; python_version >= "3.10" and python_version < "4.0"
+httpcore==1.0.7 ; python_version >= "3.10" and python_version < "4.0"
+httplib2==0.22.0 ; python_version >= "3.10" and python_version < "4.0"
+httpx==0.28.1 ; python_version >= "3.10" and python_version < "4.0"
+idna==3.10 ; python_version >= "3.10" and python_version < "4.0"
+jinja2==3.1.5 ; python_version >= "3.10" and python_version < "4.0"
+jsonpatch==1.33 ; python_version >= "3.10" and python_version < "4.0"
+jsonpointer==3.0.0 ; python_version >= "3.10" and python_version < "4.0"
+jsonschema-specifications==2024.10.1 ; python_version >= "3.10" and python_version < "4.0"
+jsonschema==4.23.0 ; python_version >= "3.10" and python_version < "4.0"
+langchain-core==0.3.37 ; python_version >= "3.10" and python_version < "4.0"
+langchain-google-genai==2.0.10 ; python_version >= "3.10" and python_version < "4.0"
+langgraph-checkpoint==2.0.16 ; python_version >= "3.10" and python_version < "4.0"
+langgraph-sdk==0.1.53 ; python_version >= "3.10" and python_version < "4.0"
+langgraph==0.2.74 ; python_version >= "3.10" and python_version < "4.0"
+langsmith==0.3.10 ; python_version >= "3.10" and python_version < "4.0"
+markdown-it-py==3.0.0 ; python_version >= "3.10" and python_version < "4.0"
+markdown==3.7 ; python_version >= "3.10" and python_version < "4.0"
+markupsafe==3.0.2 ; python_version >= "3.10" and python_version < "4.0"
+mdurl==0.1.2 ; python_version >= "3.10" and python_version < "4.0"
+msgpack==1.1.0 ; python_version >= "3.10" and python_version < "4.0"
+narwhals==1.27.1 ; python_version >= "3.10" and python_version < "4.0"
+numpy==2.2.3 ; python_version >= "3.10" and python_version < "4.0"
+orjson==3.10.15 ; python_version >= "3.10" and python_version < "4.0"
+packaging==24.2 ; python_version >= "3.10" and python_version < "4.0"
+pandas==2.2.3 ; python_version >= "3.10" and python_version < "4.0"
+pillow==11.1.0 ; python_version >= "3.10" and python_version < "4.0"
+proto-plus==1.26.0 ; python_version >= "3.10" and python_version < "4.0"
+protobuf==5.29.3 ; python_version >= "3.10" and python_version < "4.0"
+pyarrow==19.0.1 ; python_version >= "3.10" and python_version < "4.0"
+pyasn1-modules==0.4.1 ; python_version >= "3.10" and python_version < "4.0"
+pyasn1==0.6.1 ; python_version >= "3.10" and python_version < "4.0"
+pycparser==2.22 ; python_version >= "3.10" and python_version < "4.0" and platform_python_implementation == "PyPy"
+pydantic-core==2.27.2 ; python_version >= "3.10" and python_version < "4.0"
+pydantic==2.10.6 ; python_version >= "3.10" and python_version < "4.0"
+pydeck==0.9.1 ; python_version >= "3.10" and python_version < "4.0"
+pygments==2.19.1 ; python_version >= "3.10" and python_version < "4.0"
+pyparsing==3.2.1 ; python_version >= "3.10" and python_version < "4.0"
+python-dateutil==2.9.0.post0 ; python_version >= "3.10" and python_version < "4.0"
+python-dotenv==1.0.1 ; python_version >= "3.10" and python_version < "4.0"
+pytz==2025.1 ; python_version >= "3.10" and python_version < "4.0"
+pyyaml==6.0.2 ; python_version >= "3.10" and python_version < "4.0"
+referencing==0.36.2 ; python_version >= "3.10" and python_version < "4.0"
+requests-toolbelt==1.0.0 ; python_version >= "3.10" and python_version < "4.0"
+requests==2.32.3 ; python_version >= "3.10" and python_version < "4.0"
+rich==13.9.4 ; python_version >= "3.10" and python_version < "4.0"
+rpds-py==0.23.1 ; python_version >= "3.10" and python_version < "4.0"
+rsa==4.9 ; python_version >= "3.10" and python_version < "4"
+six==1.17.0 ; python_version >= "3.10" and python_version < "4.0"
+smmap==5.0.2 ; python_version >= "3.10" and python_version < "4.0"
+sniffio==1.3.1 ; python_version >= "3.10" and python_version < "4.0"
+streamlit-folium==0.24.0 ; python_version >= "3.10" and python_version < "4.0"
+streamlit==1.42.2 ; python_version >= "3.10" and python_version < "4.0"
+tenacity==9.0.0 ; python_version >= "3.10" and python_version < "4.0"
+toml==0.10.2 ; python_version >= "3.10" and python_version < "4.0"
+tornado==6.4.2 ; python_version >= "3.10" and python_version < "4.0"
+tqdm==4.67.1 ; python_version >= "3.10" and python_version < "4.0"
+typing-extensions==4.12.2 ; python_version >= "3.10" and python_version < "4.0"
+tzdata==2025.1 ; python_version >= "3.10" and python_version < "4.0"
+uritemplate==4.1.1 ; python_version >= "3.10" and python_version < "4.0"
+urllib3==2.3.0 ; python_version >= "3.10" and python_version < "4.0"
+watchdog==6.0.0 ; python_version >= "3.10" and python_version < "4.0" and platform_system != "Darwin"
+xyzservices==2025.1.0 ; python_version >= "3.10" and python_version < "4.0"
+zstandard==0.23.0 ; python_version >= "3.10" and python_version < "4.0"
