--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["shinybell <raffinement.shun.2004@gmail.com>"]
 readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.10"
@@ -14,6 +15,8 @@ streamlit-folium = "^0.24.0"
 markdown = "^3.7"
 langchain-google-genai = "^2.0.10"
 langgraph = "^0.2.74"
+pcse = "^6.0.9"
+ipykernel = "^6.29.5"
 
 
 [build-system]
