--- a/requirements.txt
+++ b/requirements.txt
@@ -1,125 +1,141 @@
-altair==5.5.0 ; python_version >= "3.10" and python_version < "4.0"
-annotated-types==0.7.0 ; python_version >= "3.10" and python_version < "4.0"
-anyio==4.8.0 ; python_version >= "3.10" and python_version < "4.0"
-appnope==0.1.4 ; python_version >= "3.10" and python_version < "4.0" and platform_system == "Darwin"
-asttokens==3.0.0 ; python_version >= "3.10" and python_version < "4.0"
-attrs==25.1.0 ; python_version >= "3.10" and python_version < "4.0"
-blinker==1.9.0 ; python_version >= "3.10" and python_version < "4.0"
-branca==0.8.1 ; python_version >= "3.10" and python_version < "4.0"
-cachetools==5.5.2 ; python_version >= "3.10" and python_version < "4.0"
-certifi==2025.1.31 ; python_version >= "3.10" and python_version < "4.0"
-cffi==1.17.1 ; python_version >= "3.10" and python_version < "4.0" and (implementation_name == "pypy" or platform_python_implementation == "PyPy")
-charset-normalizer==3.4.1 ; python_version >= "3.10" and python_version < "4.0"
-click==8.1.8 ; python_version >= "3.10" and python_version < "4.0"
-colorama==0.4.6 ; python_version >= "3.10" and python_version < "4.0" and (platform_system == "Windows" or sys_platform == "win32")
-comm==0.2.2 ; python_version >= "3.10" and python_version < "4.0"
-debugpy==1.8.12 ; python_version >= "3.10" and python_version < "4.0"
-decorator==5.1.1 ; python_version >= "3.10" and python_version < "4.0"
-dotenv==0.9.9 ; python_version >= "3.10" and python_version < "4.0"
-dotmap==1.3.30 ; python_version >= "3.10" and python_version < "4.0"
-et-xmlfile==2.0.0 ; python_version >= "3.10" and python_version < "4.0"
-exceptiongroup==1.2.2 ; python_version >= "3.10" and python_version < "3.11"
-executing==2.2.0 ; python_version >= "3.10" and python_version < "4.0"
-filetype==1.2.0 ; python_version >= "3.10" and python_version < "4.0"
-folium==0.19.4 ; python_version >= "3.10" and python_version < "4.0"
-gitdb==4.0.12 ; python_version >= "3.10" and python_version < "4.0"
-gitpython==3.1.44 ; python_version >= "3.10" and python_version < "4.0"
-google-ai-generativelanguage==0.6.15 ; python_version >= "3.10" and python_version < "4.0"
-google-api-core==2.24.1 ; python_version >= "3.10" and python_version < "4.0"
-google-api-core[grpc]==2.24.1 ; python_version >= "3.10" and python_version < "4.0"
-google-api-python-client==2.161.0 ; python_version >= "3.10" and python_version < "4.0"
-google-auth-httplib2==0.2.0 ; python_version >= "3.10" and python_version < "4.0"
-google-auth==2.38.0 ; python_version >= "3.10" and python_version < "4.0"
-google-generativeai==0.8.4 ; python_version >= "3.10" and python_version < "4.0"
-googleapis-common-protos==1.68.0 ; python_version >= "3.10" and python_version < "4.0"
-greenlet==3.1.1 ; python_version >= "3.10" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and python_version < "4.0"
-grpcio-status==1.70.0 ; python_version < "4.0" and python_version >= "3.10"
-grpcio==1.70.0 ; python_version < "4.0" and python_version >= "3.10"
-h11==0.14.0 ; python_version >= "3.10" and python_version < "4.0"
-httpcore==1.0.7 ; python_version >= "3.10" and python_version < "4.0"
-httplib2==0.22.0 ; python_version >= "3.10" and python_version < "4.0"
-httpx==0.28.1 ; python_version >= "3.10" and python_version < "4.0"
-idna==3.10 ; python_version >= "3.10" and python_version < "4.0"
-ipykernel==6.29.5 ; python_version >= "3.10" and python_version < "4.0"
-ipython-genutils==0.2.0 ; python_version >= "3.10" and python_version < "4.0"
-ipython==8.32.0 ; python_version >= "3.10" and python_version < "4.0"
-jedi==0.19.2 ; python_version >= "3.10" and python_version < "4.0"
-jinja2==3.1.5 ; python_version >= "3.10" and python_version < "4.0"
-jsonpatch==1.33 ; python_version >= "3.10" and python_version < "4.0"
-jsonpointer==3.0.0 ; python_version >= "3.10" and python_version < "4.0"
-jsonschema-specifications==2024.10.1 ; python_version >= "3.10" and python_version < "4.0"
-jsonschema==4.23.0 ; python_version >= "3.10" and python_version < "4.0"
-jupyter-client==8.6.3 ; python_version >= "3.10" and python_version < "4.0"
-jupyter-core==5.7.2 ; python_version >= "3.10" and python_version < "4.0"
-langchain-core==0.3.37 ; python_version >= "3.10" and python_version < "4.0"
-langchain-google-genai==2.0.10 ; python_version >= "3.10" and python_version < "4.0"
-langgraph-checkpoint==2.0.16 ; python_version >= "3.10" and python_version < "4.0"
-langgraph-sdk==0.1.53 ; python_version >= "3.10" and python_version < "4.0"
-langgraph==0.2.74 ; python_version >= "3.10" and python_version < "4.0"
-langsmith==0.3.10 ; python_version >= "3.10" and python_version < "4.0"
-markdown-it-py==3.0.0 ; python_version >= "3.10" and python_version < "4.0"
-markdown==3.7 ; python_version >= "3.10" and python_version < "4.0"
-markupsafe==3.0.2 ; python_version >= "3.10" and python_version < "4.0"
-matplotlib-inline==0.1.7 ; python_version >= "3.10" and python_version < "4.0"
-mdurl==0.1.2 ; python_version >= "3.10" and python_version < "4.0"
-msgpack==1.1.0 ; python_version >= "3.10" and python_version < "4.0"
-narwhals==1.27.1 ; python_version >= "3.10" and python_version < "4.0"
-nest-asyncio==1.6.0 ; python_version >= "3.10" and python_version < "4.0"
-numpy==2.2.3 ; python_version >= "3.10" and python_version < "4.0"
-openpyxl==3.1.5 ; python_version >= "3.10" and python_version < "4.0"
-orjson==3.10.15 ; python_version >= "3.10" and python_version < "4.0"
-packaging==24.2 ; python_version >= "3.10" and python_version < "4.0"
-pandas==2.2.3 ; python_version >= "3.10" and python_version < "4.0"
-parso==0.8.4 ; python_version >= "3.10" and python_version < "4.0"
-pcse==6.0.9 ; python_version >= "3.10" and python_version < "4.0"
-pexpect==4.9.0 ; python_version >= "3.10" and python_version < "4.0" and (sys_platform != "win32" and sys_platform != "emscripten")
-pillow==11.1.0 ; python_version >= "3.10" and python_version < "4.0"
-platformdirs==4.3.6 ; python_version >= "3.10" and python_version < "4.0"
-prompt-toolkit==3.0.50 ; python_version >= "3.10" and python_version < "4.0"
-proto-plus==1.26.0 ; python_version >= "3.10" and python_version < "4.0"
-protobuf==5.29.3 ; python_version >= "3.10" and python_version < "4.0"
-psutil==7.0.0 ; python_version >= "3.10" and python_version < "4.0"
-ptyprocess==0.7.0 ; python_version >= "3.10" and python_version < "4.0" and (sys_platform != "win32" and sys_platform != "emscripten")
-pure-eval==0.2.3 ; python_version >= "3.10" and python_version < "4.0"
-pyarrow==19.0.1 ; python_version >= "3.10" and python_version < "4.0"
-pyasn1-modules==0.4.1 ; python_version >= "3.10" and python_version < "4.0"
-pyasn1==0.6.1 ; python_version >= "3.10" and python_version < "4.0"
-pycparser==2.22 ; python_version >= "3.10" and python_version < "4.0" and (implementation_name == "pypy" or platform_python_implementation == "PyPy")
-pydantic-core==2.27.2 ; python_version >= "3.10" and python_version < "4.0"
-pydantic==2.10.6 ; python_version >= "3.10" and python_version < "4.0"
-pydeck==0.9.1 ; python_version >= "3.10" and python_version < "4.0"
-pygments==2.19.1 ; python_version >= "3.10" and python_version < "4.0"
-pyparsing==3.2.1 ; python_version >= "3.10" and python_version < "4.0"
-python-dateutil==2.9.0.post0 ; python_version >= "3.10" and python_version < "4.0"
-python-dotenv==1.0.1 ; python_version >= "3.10" and python_version < "4.0"
-pytz==2025.1 ; python_version >= "3.10" and python_version < "4.0"
-pywin32==308 ; sys_platform == "win32" and platform_python_implementation != "PyPy" and python_version >= "3.10" and python_version < "4.0"
-pyyaml==6.0.2 ; python_version >= "3.10" and python_version < "4.0"
-pyzmq==26.2.1 ; python_version >= "3.10" and python_version < "4.0"
-referencing==0.36.2 ; python_version >= "3.10" and python_version < "4.0"
-requests-toolbelt==1.0.0 ; python_version >= "3.10" and python_version < "4.0"
-requests==2.32.3 ; python_version >= "3.10" and python_version < "4.0"
-rich==13.9.4 ; python_version >= "3.10" and python_version < "4.0"
-rpds-py==0.23.1 ; python_version >= "3.10" and python_version < "4.0"
-rsa==4.9 ; python_version >= "3.10" and python_version < "4"
-six==1.17.0 ; python_version >= "3.10" and python_version < "4.0"
-smmap==5.0.2 ; python_version >= "3.10" and python_version < "4.0"
-sniffio==1.3.1 ; python_version >= "3.10" and python_version < "4.0"
-sqlalchemy==1.4.54 ; python_version >= "3.10" and python_version < "4.0"
-stack-data==0.6.3 ; python_version >= "3.10" and python_version < "4.0"
-streamlit-folium==0.24.0 ; python_version >= "3.10" and python_version < "4.0"
-streamlit==1.42.2 ; python_version >= "3.10" and python_version < "4.0"
-tenacity==9.0.0 ; python_version >= "3.10" and python_version < "4.0"
-toml==0.10.2 ; python_version >= "3.10" and python_version < "4.0"
-tornado==6.4.2 ; python_version >= "3.10" and python_version < "4.0"
-tqdm==4.67.1 ; python_version >= "3.10" and python_version < "4.0"
-traitlets-pcse==5.0.0.dev ; python_version >= "3.10" and python_version < "4.0"
-traitlets==5.14.3 ; python_version >= "3.10" and python_version < "4.0"
-typing-extensions==4.12.2 ; python_version >= "3.10" and python_version < "4.0"
-tzdata==2025.1 ; python_version >= "3.10" and python_version < "4.0"
-uritemplate==4.1.1 ; python_version >= "3.10" and python_version < "4.0"
-urllib3==2.3.0 ; python_version >= "3.10" and python_version < "4.0"
-watchdog==6.0.0 ; python_version >= "3.10" and python_version < "4.0" and platform_system != "Darwin"
-wcwidth==0.2.13 ; python_version >= "3.10" and python_version < "4.0"
-xyzservices==2025.1.0 ; python_version >= "3.10" and python_version < "4.0"
-zstandard==0.23.0 ; python_version >= "3.10" and python_version < "4.0"
+altair==5.5.0
+annotated-types==0.7.0
+anyio==4.8.0
+appnope==0.1.4
+asttokens==3.0.0
+attrs==25.1.0
+blinker==1.9.0
+branca==0.8.1
+cachetools==5.5.2
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.4.1
+click==8.1.8
+comm==0.2.2
+contourpy==1.3.1
+cryptography==44.0.1
+cycler==0.12.1
+DateTime==5.5
+debugpy==1.8.12
+decorator==4.4.2
+dotenv==0.9.9
+dotmap==1.3.30
+et_xmlfile==2.0.0
+exceptiongroup==1.2.2
+executing==2.2.0
+filetype==1.2.0
+folium==0.19.4
+fonttools==4.56.0
+geographiclib==2.0
+geojsonio==0.0.3
+geopandas==1.0.1
+geopy==2.4.1
+gitdb==4.0.12
+github3.py==4.0.1
+GitPython==3.1.44
+google-ai-generativelanguage==0.6.15
+google-api-core==2.24.1
+google-api-python-client==2.161.0
+google-auth==2.38.0
+google-auth-httplib2==0.2.0
+google-generativeai==0.8.4
+googleapis-common-protos==1.68.0
+grpcio==1.70.0
+grpcio-status==1.70.0
+h11==0.14.0
+httpcore==1.0.7
+httplib2==0.22.0
+httpx==0.28.1
+idna==3.10
+ipykernel==6.29.5
+ipython==8.32.0
+ipython-genutils==0.2.0
+jedi==0.19.2
+Jinja2==3.1.5
+joblib==1.4.2
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+kiwisolver==1.4.8
+langchain-core==0.3.37
+langchain-google-genai==2.0.10
+langgraph==0.2.74
+langgraph-checkpoint==2.0.16
+langgraph-sdk==0.1.53
+langsmith==0.3.10
+Markdown==3.7
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+matplotlib==3.10.0
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+msgpack==1.1.0
+narwhals==1.27.1
+nest-asyncio==1.6.0
+numpy==2.2.3
+openpyxl==3.1.5
+orjson==3.10.15
+packaging==24.2
+pandas==2.2.3
+parso==0.8.4
+PCSE==6.0.9
+pexpect==4.9.0
+pillow==10.4.0
+platformdirs==4.3.6
+prompt_toolkit==3.0.50
+proto-plus==1.26.0
+protobuf==5.29.3
+psutil==7.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pyarrow==19.0.1
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pycparser==2.22
+pydantic==2.10.6
+pydantic_core==2.27.2
+pydeck==0.9.1
+Pygments==2.19.1
+PyJWT==2.10.1
+pyogrio==0.10.0
+pyparsing==3.2.1
+pyproj==3.7.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2025.1
+PyYAML==6.0.2
+pyzmq==26.2.1
+referencing==0.36.2
+requests==2.32.3
+requests-toolbelt==1.0.0
+rich==13.9.4
+rpds-py==0.23.1
+rsa==4.9
+scikit-learn==1.6.1
+scipy==1.15.2
+shapely==2.0.7
+six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
+SQLAlchemy==1.4.54
+stack-data==0.6.3
+streamlit==1.42.2
+streamlit_folium==0.24.0
+tenacity==9.0.0
+threadpoolctl==3.5.0
+toml==0.10.2
+tornado==6.4.2
+tqdm==4.67.1
+traitlets==5.14.3
+traitlets_pcse==5.0.0.dev0
+typing_extensions==4.12.2
+tzdata==2025.1
+uritemplate==4.1.1
+urllib3==2.3.0
+wcwidth==0.2.13
+xyzservices==2025.1.0
+zope.interface==7.2
+zstandard==0.23.0
